# paper_organizer

./: .gitignore  design.md  pyproject.toml  tmp.txt
.continue/agents/: paper_organizer_config.yaml
backend/models/: document.py
backend/services/: google_scholar_service.py
backend/src/api/: routes.py
backend/tests/: test_evaluation_service.py  test_search_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/common/: Header.js
frontend/src/components/search/: SearchForm.js  SearchResultItem.js  SearchResultList.js
frontend/src/pages/: DocumentPage.js  EvaluationPage.js  HomePage.js  SearchPage.js
frontend/src/styles/: global.css
src/: main.py
src/models/: document.py  evaluation.py
src/services/: evaluation_service.py  pdf_processor.py  search_service.py
src/utils/: config.py  helpers.py  logger.py
tests/: test_main.py  test_pdf_processor.py
