[project]
name = "paper-organizer"
version = "0.1.0"
description = ""
authors = [{ name = "Oz Dahlia", email = "oz.dahlia.oct@gmail.com" }]
requires-python = ">=3.11, <3.12"
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "loguru>=0.7.3",
    "openai>=1.97.0",
    "openpyxl>=3.1.5",
    "pydata-google-auth>=1.9.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
    "ipykernel>=7.1.0",
    "plotly>=6.4.0",
    "sphinx-rtd-theme>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "autoflake>=2.3.1,<3",
    "black>=24.10.0,<25",
    "cfgv>=3.4.0",
    "flake8>=7.1.1,<8",
    "pre-commit>=4.1.0",
    "moto>=5.1.1",
    "awscli>=1.38.5",
]

[tool.uv]
package = false
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
